--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,6 +28,14 @@
     --smallestFontSize: .75rem;
 }
 
+
+#root{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: var(--bgColor);
+}
+
 .flex{
     display: flex;
     align-items: center;
