--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,13 @@
   --smallestFontSize: .75rem;
 }
 
+#root {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: var(--bgColor);
+}
+
 .flex {
   display: flex;
   align-items: center;
