--- a/client/src/Components/Dashboard/Components/body_section/top/top.scss
+++ b/client/src/Components/Dashboard/Components/body_section/top/top.scss
@@ -19,7 +19,7 @@
 .topSection{
     .headerSection{
         padding: .75rem;
-        justify-content: space-between;
+        justify-content: space-evenly;
         width: 82vw;
         .title{
         h1{
