--- a/client/src/Components/Dashboard/Components/user/User.scss
+++ b/client/src/Components/Dashboard/Components/user/User.scss
@@ -1,13 +1,41 @@
 .tableDiv{
-    width: 100%;
+    width: 75%;
     margin: 1rem;
     .tableTitle{
         text-align: center;
     }
     .tableContainer{
+        .searchHeader{
+            margin: 1rem;
+            background-color: hsl(111, 11%, 85%); 
+            padding-bottom: 20px;
+        }
         .data-table{
             width: 80%;
-            margin: 20px auto;
+            margin: 0 auto;
         }
+        #users {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+          }
+          
+          #users td, #users th {
+            border: 1px solid #ddd;
+            padding: 8px;
+          }
+          
+          #users tr:nth-child(even){background-color: #f2f2f2;}
+          
+          #users tr:hover {background-color: #ddd;}
+          
+          #users th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #04AA6D;
+            color: white;
+          }
+        
     }
 }
