--- a/client/src/Components/Dashboard/Components/user/User.css
+++ b/client/src/Components/Dashboard/Components/user/User.css
@@ -1,11 +1,38 @@
 .tableDiv {
-  width: 100%;
+  width: 75%;
   margin: 1rem;
 }
 .tableDiv .tableTitle {
   text-align: center;
 }
+.tableDiv .tableContainer .searchHeader {
+  margin: 1rem;
+  background-color: hsl(111, 11%, 85%);
+  padding-bottom: 20px;
+}
 .tableDiv .tableContainer .data-table {
   width: 80%;
-  margin: 20px auto;
+  margin: 0 auto;
+}
+.tableDiv .tableContainer #users {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+.tableDiv .tableContainer #users td, .tableDiv .tableContainer #users th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+.tableDiv .tableContainer #users tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.tableDiv .tableContainer #users tr:hover {
+  background-color: #ddd;
+}
+.tableDiv .tableContainer #users th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
 }/*# sourceMappingURL=User.css.map */
